build/usd-sys/usd-c/include.in/pxr/usd/sdf/sdf_prim_spec.h

typedef struct pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__SdfLayer__t_s pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__SdfLayer__t;
typedef pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__SdfLayer__t pxr_SdfLayerHandle_t;
typedef struct pxrInternal_v0_21__pxrReserved____SdfPath_t_s pxrInternal_v0_21__pxrReserved____SdfPath_t;
typedef pxrInternal_v0_21__pxrReserved____SdfPath_t pxr_SdfPath_t;
/** \class SdfPrimSpec

Represents a prim description in an SdfLayer object.

Every SdfPrimSpec object is defined in a layer.  It is identified by its
path (SdfPath class) in the namespace hierarchy of its layer.  SdfPrimSpecs
can be created using the New() method as children of either the containing
SdfLayer itself (for "root level" prims), or as children of other 
SdfPrimSpec objects to extend a hierarchy.  The helper function 
SdfCreatePrimInLayer() can be used to quickly create a hierarchy of
primSpecs.

SdfPrimSpec objects have properties of two general types: attributes
(containing values) and relationships (different types of connections to
other prims and attributes).  Attributes are represented by the
SdfAttributeSpec class and relationships by the SdfRelationshipSpec class.
Each prim has its own namespace of properties.  Properties are stored and
accessed by their name.

SdfPrimSpec objects have a typeName, permission restriction, and they
reference and inherit prim paths.  Permission restrictions control which
other layers may refer to, or express opinions about a prim. See the
SdfPermission class for more information.

\todo
\li Insert doc about references and inherits here.
\li Should have validate... methods for name, children, properties */
typedef struct pxrInternal_v0_21__pxrReserved____SdfPrimSpec_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____SdfPrimSpec_t;
typedef pxrInternal_v0_21__pxrReserved____SdfPrimSpec_t pxr_SdfPrimSpec_t;
/** Returns true if this prim has any relocates opinion, including
that there should be no relocates (i.e. an empty map).  An empty
map (no relocates) does not mean the same thing as a missing map
(no opinion). */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfPrimSpec_HasRelocates(
    pxr_SdfPrimSpec_t const * this_
    , _Bool * return_);
/** Clears the relocates opinion for this prim. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfPrimSpec_ClearRelocates(
    pxr_SdfPrimSpec_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfPrimSpec__assign(
    pxr_SdfPrimSpec_t * this_
    , pxr_SdfPrimSpec_t * * return_
    , pxr_SdfPrimSpec_t const * rhs);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfPrimSpec_dtor(
    pxr_SdfPrimSpec_t * this_);
/** Convenience function to create a prim at the given path, and any 
necessary parent prims, in the given layer.

If a prim already exists at the given path, do nothing and return true.

Any newly created specs have SdfSpecifierOver and an empty type.  primPath
must be a valid prim path.  Return false and issue an error if we fail to
author the required scene description. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved___SdfJustCreatePrimInLayer(
    _Bool * return_
    , pxr_SdfLayerHandle_t const * layer
    , pxr_SdfPath_t const * primPath);