build/usd-sys/src/pxr/usd/sdf/sdf_prim_spec.rs


pub fn pxrInternal_v0_21__pxrReserved____SdfPrimSpec_HasRelocates(this_: *const pxr_SdfPrimSpec_t, return_: *mut bool) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____SdfPrimSpec_ClearRelocates(this_: *mut pxr_SdfPrimSpec_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____SdfPrimSpec__assign(this_: *mut pxr_SdfPrimSpec_t, return_: *mut *mut pxr_SdfPrimSpec_t, rhs: *const pxr_SdfPrimSpec_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved____SdfPrimSpec_dtor(this_: *mut pxr_SdfPrimSpec_t) -> Exception;

pub fn pxrInternal_v0_21__pxrReserved___SdfJustCreatePrimInLayer(return_: *mut bool, layer: *const pxr_SdfLayerHandle_t, prim_path: *const pxr_SdfPath_t) -> Exception;


} // extern "C"
